@@ -1,14 +1,12 @@
 
 package com.rms.config;
 
-import java.util.List;
+import java.util.Arrays;
 
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -22,87 +20,102 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import com.rms.Security.JwtAuthenticationFilter;
-import com.rms.Service.CustomUserDetailsService;
 
 @Configuration
 @EnableMethodSecurity
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthenticationFilter;
-    private final CustomUserDetailsService customUserDetailsService;
 
-    @Value("${app.cors.allowed-origin:http://localhost:4200}")
-    private String allowedOrigin;
+    @Value("${app.cors.allowed-origins}")
+    private String allowedOrigins;
 
     public SecurityConfig(
-            JwtAuthenticationFilter jwtAuthenticationFilter,
-            CustomUserDetailsService customUserDetailsService) {
+            JwtAuthenticationFilter jwtAuthenticationFilter) {
 
-        this.jwtAuthenticationFilter = jwtAuthenticationFilter;
-        this.customUserDetailsService = customUserDetailsService;
+        this.jwtAuthenticationFilter =
+                jwtAuthenticationFilter;
     }
 
-    // PASSWORD ENCODER
     @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    // AUTHENTICATION PROVIDER
-    @Bean
-    public AuthenticationProvider authenticationProvider() {
-
-        DaoAuthenticationProvider provider =
-                new DaoAuthenticationProvider();
-
-        provider.setUserDetailsService(
-                customUserDetailsService);
-
-        provider.setPasswordEncoder(
-                passwordEncoder());
-
-        return provider;
-    }
-
-    // AUTHENTICATION MANAGER
-    @Bean
-    public AuthenticationManager authenticationManager(
-            AuthenticationConfiguration configuration)
+    public SecurityFilterChain securityFilterChain(
+            HttpSecurity http)
             throws Exception {
 
-        return configuration.getAuthenticationManager();
+        http
+                .csrf(csrf ->
+                        csrf.disable())
+
+                .cors(cors ->
+                        cors.configurationSource(
+                                corsConfigurationSource()))
+
+                .sessionManagement(session ->
+                        session.sessionCreationPolicy(
+                                SessionCreationPolicy.STATELESS))
+
+                .authorizeHttpRequests(auth -> auth
+
+                        .requestMatchers(
+                                "/auth/**",
+                                "/swagger-ui/**",
+                                "/swagger-ui.html",
+                                "/v3/api-docs/**")
+                        .permitAll()
+
+                        .requestMatchers(
+                                "/api/resources/**")
+                        .hasAnyRole(
+                                "ADMIN",
+                                "USER")
+
+                        .requestMatchers(
+                                "/api/reservations/**")
+                        .hasAnyRole(
+                                "ADMIN",
+                                "USER")
+
+                        .anyRequest()
+                        .authenticated()
+                )
+
+                .addFilterBefore(
+                        jwtAuthenticationFilter,
+                        UsernamePasswordAuthenticationFilter.class);
+
+        return http.build();
     }
 
-    // CORS CONFIGURATION
     @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
+    public CorsConfigurationSource
+            corsConfigurationSource() {
 
         CorsConfiguration configuration =
                 new CorsConfiguration();
 
-        // Configurable through environment variable
         configuration.setAllowedOrigins(
-                List.of(allowedOrigin));
+                Arrays.stream(
+                                allowedOrigins.split(","))
+                        .map(String::trim)
+                        .filter(origin ->
+                                !origin.isBlank())
+                        .toList());
 
         configuration.setAllowedMethods(
-                List.of(
+                Arrays.asList(
                         "GET",
                         "POST",
                         "PUT",
-                        "PATCH",
                         "DELETE",
+                        "PATCH",
                         "OPTIONS"));
 
         configuration.setAllowedHeaders(
-                List.of(
+                Arrays.asList(
                         "Authorization",
                         "Content-Type",
                         "Accept"));
 
-        /*
-         * Credentials are enabled only for the configured
-         * frontend origin. Do NOT use "*" with credentials.
-         */
         configuration.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source =
@@ -115,70 +128,19 @@ public class SecurityConfig {
         return source;
     }
 
-    // SECURITY FILTER CHAIN
     @Bean
-    public SecurityFilterChain securityFilterChain(
-            HttpSecurity http)
+    public PasswordEncoder passwordEncoder() {
+
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationManager authenticationManager(
+            AuthenticationConfiguration configuration)
             throws Exception {
 
-        http
-            // Enable our CORS configuration
-            .cors(cors ->
-                    cors.configurationSource(
-                            corsConfigurationSource()))
-
-            // Disable CSRF because this is a stateless REST API
-            .csrf(csrf -> csrf.disable())
-
-            // JWT authentication is stateless
-            .sessionManagement(session ->
-                    session.sessionCreationPolicy(
-                            SessionCreationPolicy.STATELESS))
-
-            // Authentication provider
-            .authenticationProvider(
-                    authenticationProvider())
-
-            // Authorization rules
-            .authorizeHttpRequests(auth -> auth
-
-                    // Authentication endpoint
-                    .requestMatchers(
-                            "/auth/login")
-                    .permitAll()
-
-                    // Swagger / OpenAPI
-                    .requestMatchers(
-                            "/swagger-ui/**",
-                            "/swagger-ui.html",
-                            "/v3/api-docs/**")
-                    .permitAll()
-
-                    // ADMIN only
-                    .requestMatchers(
-                            "/api/admin/**")
-                    .hasRole("ADMIN")
-
-                    // Resources
-                    .requestMatchers(
-                            "/api/resources/**")
-                    .hasAnyRole("ADMIN", "USER")
-
-                    // Reservations
-                    .requestMatchers(
-                            "/api/reservations/**")
-                    .hasAnyRole("ADMIN", "USER")
-
-                    // Any other request requires authentication
-                    .anyRequest()
-                    .authenticated())
-
-            // JWT filter
-            .addFilterBefore(
-                    jwtAuthenticationFilter,
-                    UsernamePasswordAuthenticationFilter.class);
-
-        return http.build();
+        return configuration
+                .getAuthenticationManager();
     }
 }
 
